--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+    <div class="header"></div>
+
     <div class="wrapper" data-bind="attr: { style: wrapperCSS() }">
       <div class="control-panel">
         <div class="drop-target">Drop your background here.</div>
