--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <div class="header"></div>
 
     <div class="wrapper" data-bind="attr: { style: wrapperCSS() }">
+      <div class="about">
+        <h1>Jamouflage</h1>
+
+        <p>Little tool for <a href="http://www.thisismyjam.com">This Is My Jam</a> lovers. Make a cover image that blends in with your jam background.</p>
+
+	<p>If you use it, let me know! <a href="mailto:aanand.prasad@gmail.com">Email me</a> or mention <a href="http://www.thisismyjam.com/aanand">@aanand</a> in your description or a comment.</p>
+
+	<p class="signoff">Love, <a href="http://aanandprasad.com">Aanand</a></p>
+      </div>
+
       <div class="control-panel">
         <div class="drop-target">Drop your background here.</div>
 
