Say 'cover image' instead of 'Jamvatar'

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="drop-target">Drop your background here.</div>
 
         <div class="customise" data-bind="visible: showControls()">
-          <button class="btn" type="button" data-bind="click: downloadJamvatar">Download Jamvatar</button>
+          <button class="btn" type="button" data-bind="click: downloadJamvatar">Download cover image</button>
         </div>
       </div>
 
