--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <p>Little tool for <a href="http://www.thisismyjam.com">This Is My Jam</a> lovers. Make a cover image that blends in with your jam background.</p>
 
-        <p>Note: it might look a little off in the preview, but trust me&mdash;it&rsquo;ll look just fine once it&rsquo;s posted.</p>
+        <p>Note: it might look a little wrong on the customisation page, but trust me&mdash;it&rsquo;ll look just beautiful when you post it.</p>
 
         <p>If you use it, let me know! <a href="mailto:aanand.prasad@gmail.com">Email me</a> or mention <a href="http://www.thisismyjam.com/aanand">@aanand</a> in your description or a comment.</p>
 
