Note about hashtag; link directly to jam profile

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <p>Note: it might look a little wrong on the customisation page, but trust me&mdash;it&rsquo;ll look just beautiful when you post it.</p>
 
-        <p>If you use it, let me know! <a href="mailto:aanand.prasad@gmail.com">Email me</a> or mention <a href="http://www.thisismyjam.com/aanand">@aanand</a> in your description or a comment.</p>
+        <p>If you use it, tag your jam with #jamouflage!</p>
 
-        <p class="signoff">Love, <a href="http://aanandprasad.com">Aanand</a></p>
+        <p class="signoff">Love, <a href="https://www.thisismyjam.com/aanand">Aanand</a></p>
       </div>
 
       <div class="control-panel">
