Link to tag page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <p>Note: it might look a little wrong on the customisation page, but trust me&mdash;it&rsquo;ll look just beautiful when you post it.</p>
 
-        <p>If you use it, tag your jam with #jamouflage!</p>
+        <p>If you use it, tag your jam with <a href="https://www.thisismyjam.com/tagged/jamouflage">#jamouflage</a>!</p>
 
         <p class="signoff">Love, <a href="https://www.thisismyjam.com/aanand">Aanand</a></p>
       </div>
